--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,6 +2,9 @@
   <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
   <span class="title"><%= link_to micropost.title, micropost %></span>
   <span class="content"><%= micropost.content %></span>
+  <span class="content">
+    Posted by: <%= micropost.user.name %>
+  </span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     <% if current_user?(micropost.user) %>
